--- a/serverless.yml
+++ b/serverless.yml
@@ -20,6 +20,7 @@ service: cronie
 provider:
   name: aws
   runtime: nodejs4.3
+  region: eu-central-1
 
 # you can overwrite defaults here
 #  stage: dev
